# sysprop

./: .clang-format  .clang-tidy  CLAUDE.md  CMakeLists.txt  DESIGN.md  INSTALL.md  INTERNALS.md  README.md  SYSTEMD.md
.cache/clangd/index/: cli_commands.cpp.89C5B33100FA6906.idx  cli_commands.h.C31DBE046C6D4C94.idx  defaults_loader.cpp.3816BD880370E2BE.idx  defaults_loader.h.A1DE657F72894F42.idx  dir_setup.cpp.DC9EDFFF84EC1113.idx  dir_setup.h.42986C2980B3CB76.idx  dir_setup_test.cpp.8E4D092D27A9138C.idx  file_backend.cpp.9CD5CF7C2F3F1092.idx  file_backend.h.90FD89EA09FFC677.idx  file_backend_test.cpp.F7B387005D118F41.idx  file_property_store.cpp.C91D9389A76C9CF9.idx  file_property_store.h.F35B433EE54B6FA5.idx  file_property_store_test.cpp.8B7ABB0430BE8CF7.idx  init_helpers.cpp.FD21A86B033C3FC6.idx  init_helpers.h.5175C2A2BFCF9663.idx  integration_test.cpp.67473F46B62EDB9F.idx  mock_property_store.h.D2D99C8FA6468ECF.idx  mock_property_store_test.cpp.231FC5F32D9BFF13.idx  property_store.cpp.535F5863728E9898.idx  property_store.h.74ED1677505CEF2B.idx  property_store_test.cpp.795363BE4C820A54.idx  sysprop.cpp.1B90F726452FB3D4.idx  sysprop.h.FC117097FA7256F5.idx  sysprop_benchmark.cpp.A2B047BC96E8E282.idx  sysprop_init.cpp.7EC057828C3F7EA7.idx  sysprop_init_helpers_test.cpp.2D1C34DF6FC7DD1A.idx  sysprop_init_test.cpp.7E9DAB9761F1E040.idx  sysprop_internal.h.F9F772CFDAC71B3B.idx  sysprop_main.cpp.C98DB3B91ABB10CA.idx  sysprop_main_test.cpp.CD11796B61DF668C.idx  validation.cpp.75221D4DDEED1777.idx  validation.h.83B1D3A975DE3B96.idx  validation_test.cpp.B1C90C2D148E771A.idx
benchmarks/: CMakeLists.txt  sysprop_benchmark.cpp
cmake/: FetchDependencies.cmake
examples/: CMakeLists.txt
examples/c_example/: main.c
examples/cpp_example/: main.cpp
include/sysprop/: property_store.h  sysprop.h
include/sysprop/testing/: internal.h  mock_property_store.h
scripts/: benchmark.sh  build.sh  lint.sh  test.sh
src/: CMakeLists.txt  backend.h  file_backend.cpp  file_backend.h  file_property_store.cpp  file_property_store.h  property_store.cpp  property_store.h  sysprop.cpp  validation.cpp  validation.h
tests/: CMakeLists.txt  file_backend_test.cpp  file_property_store_test.cpp  integration_test.cpp  mock_property_store_test.cpp  property_store_test.cpp  sysprop_dump_test.cpp  sysprop_init_helpers_test.cpp  sysprop_init_test.cpp  sysprop_main_test.cpp  validation_test.cpp
tools/: CMakeLists.txt  cli_commands.cpp  cli_commands.h  defaults_loader.cpp  defaults_loader.h  init_helpers.cpp  init_helpers.h  sysprop_init.cpp  sysprop_main.cpp
